[package]
name = "gameserver"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
axum = "0.7.5"
tokio-tungstenite = "*"
serde = { version = "1", features = ["derive"] }
uuid = "1.8.0"
log = "0.4"
tokio-stream = "0.1"
futures-util = "0.3"
quick-protobuf = "0.8"
serde_json = "1.0"
